2002-11-12  Mark Mitchell  <mark@codesourcery.com>

	* NEWS: Mention uniform extension file format.
	* qm/extension.py (parse_dom_element): Extend backwards
	compatibility tricks.
	* qm/test/base.py (_get_db_configuration_path): Remove.
	(is_database): Likewise.
	(load_database): Likewise.
	(create_database): Likewise.
	(count_outcomes): Likewise.
	* qm/test/cmdline.py (QMTest.GetDatabase): Adjust call to
	load_database.
	* qm/test/database.py (get_configuration_file): New function.
	(is_database): Likewise.
	(create_database): Likewise.
	(load_database): Likewise.
	* qm/test/text_result_stream.py (TextResultStream._CountOutcomes):
	New method.
	* qm/test/share/dtds/resource.dtd: Remove.
	* qm/test/share/dtds/target.dtd: Likewise.
	* qm/test/share/dtds/test.dtd: Likewise.
	* qm/test/share/dtds/tdb-configuration.dtd: Likewise.
	
2002-11-11  Mark Mitchell  <mark@codesourcery.com>

	* NEWS: Mention automatic use of context files.
	* qm/common.py (MapReplacer): Remove.
	(OrderedMap): Likewise.
	(replace_by_map): Likewise.
	(invert_map): Likewise.
	* qm/tetst/cmdline.py (QMTest.MakeContext): Use Context.Read.
	* qm/test/context.py (Context.Read): New method.
	* qm/test/doc/reference.xml: Document automatic use of -C option.
	
2002-11-06  Mark Mitchell  <mark@codesourcery.com>

	* qm/fields.py (BooleanField): New class.
	* qm/xmlutil.py (ParseError): Remove.
	(load_xml_file): Revise docoumentation.
	(load_xml): Likewise.
	* qm/test/cmdline.py (__ExecuteSummarize): Handle XML parse errors
	gracefully.
	* qm/test/database.py (Database.arguments): Add modifiable.
	(Database.IsModifiable): New method.
	* qm/test/execution_engine.py (ExecutionEngine._AddResult): Tweak
	handling of resource results.
	* qm/test/file_database.py (FileDatabase._AreLabelsPaths): New
	method.  Use it throughout.
	* qm/test/result.py (Result.RESOURCE_SETUP): New variable.
	(Result.RESOURCE_CLEANUP): Likewise.
	(Result.ACTION): Remove.
	(Result.kinds): Update.