@@ -1,3 +1,9 @@
+2002-11-14  Mark Mitchell  <mark@codesourcery.com>
+
+	* qm/read_thread.py: New file.
+	* qm/write_thread.py: Likewise.
+	* qm/test/classes/command.py: Use them.
+
 2002-11-12  Mark Mitchell  <mark@codesourcery.com>
 
 	* NEWS: Mention uniform extension file format.
